Prevent horizontal page scrollbar when window is small

--- a/www/page.css
+++ b/www/page.css
@@ -25,8 +25,8 @@ html, body {
 #page-wrapper {
 	overflow: hidden;
 	background-color: #fff;
-	height: 100%;
 	width: 100%;
+	height: 100%;
 	font: 14px/1.4 'Source Sans Pro', Helvetica, sans-serif;
 	color: #444;
 }
@@ -322,6 +322,7 @@ div.error-btn.active:hover:not(.selected) {
 #g-simplify-control-wrapper {
 	position: absolute;
 	width: 100%;
+	overflow: hidden;
 	margin: 6px auto 0 auto;
 	top: 0px;
 }
